feat(server): contacts scoped by client
